--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "cheerio": "^1.2.0",
     "crawlee": "^3.15.3",
-    "playwright": "^1.58.1"
+    "playwright": "^1.58.1",
+    "wappalyzer": "^7.0.3"
   }
 }
