--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "description": "",
   "dependencies": {
+    "apify": "^3.5.3",
     "cheerio": "^1.2.0",
     "crawlee": "^3.15.3",
     "playwright": "^1.58.1",
