--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "apify": "^3.5.3",
+    "axios": "^1.13.4",
     "cheerio": "^1.2.0",
     "crawlee": "^3.15.3",
     "playwright": "^1.58.1",
